<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nomeTransacaoEditText"
        android:hint="@string/nome_transacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tipoTransacaoEditText"
        android:hint="@string/tipo_transacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/valorTransacaoEditText"
        android:hint="@string/valor_transacao"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/naturezaTransacaoRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/creditoRadioButton"
                android:text="@string/credito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/debitoRadioButton"
                android:text="@string/debito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </RadioGroup>

</LinearLayout>